chore: initial commit

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,35 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<numpy.lib.npyio.NpzFile at 0x25fc1292500>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import cv2\n",
+    "import os\n",
     "import numpy as np\n",
     "\n",
-    "filepath = './data/Karin_Viard_1.npz'\n",
-    "videoFile = np.load(filepath)\n",
-    "colorImages =  videoFile['colorImages']\n",
-    "boundingBox = videoFile['boundingBox']\n",
-    "landmarks2D = videoFile['landmarks2D']"
+    "dir = \"./smaller-data\"\n",
+    "for filename in os.listdir(dir):\n",
+    "    filepath = (os.path.join(dir, filename))\n",
+    "    name = filename.split(\".\")\n",
+    "    name = name[0]\n",
+    "\n",
+    "    videoFile = np.load(filepath)\n",
+    "    colorImages = videoFile['colorImages']\n",
+    "    boundingBox = videoFile['boundingBox']\n",
+    "    landmarks2D = videoFile['landmarks2D']\n",
+    "\n",
+    "    height = colorImages.shape[0]\n",
+    "    width = colorImages.shape[1]\n",
+    "    for i in range(colorImages.shape[-1]):\n",
+    "        viss = []\n",
+    "        img = np.zeros((height, width, 3), np.uint8)\n",
+    "        img1 = colorImages[:, :, :, i]\n",
+    "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
+    "\n",
+    "        bb = boundingBox[:, :, i]\n",
+    "        for mark in landmarks2D[:, :, i]:\n",
+    "            cv2.circle(img, (int(mark[0]), int(mark[1])), 1, (255, 255, 255))\n",
+    "\n",
+    "        bbox_true = [int(bb[0, 0]), int(bb[0, 1]), int(bb[3, 0]), int(bb[3, 1])]\n",
+    "        cv2.rectangle(img,\n",
+    "                        (int(bb[0, 0]), int(bb[0, 1])), \n",
+    "                        (int(bb[3, 0]), int(bb[3, 1])),\n",
+    "                        (0, 0, 255), 1)\n",
+    "\n",
+    "        combine = np.hstack((img, img1))\n",
+    "        cv2.imshow('video', combine)\n",
+    "        c = cv2.waitKey(1)\n",
+    "        if c == 27:\n",
+    "            break\n",
+    "    cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error opening video stream or file\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
