feat: load npz and write videos

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,9 +23,11 @@
     "\n",
     "    height = colorImages.shape[0]\n",
     "    width = colorImages.shape[1]\n",
+    "    size = (width, height)\n",
+    "    out = cv2.VideoWriter(os.path.join('./videos',f'{name}.mp4'), cv2.VideoWriter_fourcc(*'H264'), 25, size, False)\n",
     "    for i in range(colorImages.shape[-1]):\n",
     "        viss = []\n",
-    "        img = np.zeros((height, width, 3), np.uint8)\n",
+    "        img = np.ones((height, width, 3), np.uint8)\n",
     "        img1 = colorImages[:, :, :, i]\n",
     "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
     "\n",
@@ -40,28 +42,63 @@
     "                        (0, 0, 255), 1)\n",
     "\n",
     "        combine = np.hstack((img, img1))\n",
-    "        cv2.imshow('video', combine)\n",
-    "        c = cv2.waitKey(1)\n",
-    "        if c == 27:\n",
-    "            break\n",
+    "        out.write(img1)\n",
+    "        # cv2.imshow('video', combine)\n",
+    "        # c = cv2.waitKey(1)\n",
+    "        # if c == 27:\n",
+    "        #     break\n",
+    "    out.release()\n",
     "    cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error opening video stream or file\n",
-      "0\n"
+      "79\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Create a VideoCapture object and read from input file\n",
+    "cap = cv2.VideoCapture('./videos/Karin_Viard_1.mp4')\n",
+    "  \n",
+    "# Check if camera opened successfully\n",
+    "if (cap.isOpened() == False):\n",
+    "    print(\"Error opening video file\")\n",
+    "\n",
+    "length = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "print(length)\n",
+    "  \n",
+    "# Read until video is completed\n",
+    "while(cap.isOpened()):\n",
+    "      \n",
+    "# Capture frame-by-frame\n",
+    "    ret, frame = cap.read()\n",
+    "    if ret == True:\n",
+    "    # Display the resulting frame\n",
+    "        cv2.imshow('Frame', frame)\n",
+    "          \n",
+    "    # Press Q on keyboard to exit\n",
+    "        if cv2.waitKey(25) & 0xFF == ord('q'):\n",
+    "            break\n",
+    "  \n",
+    "# Break the loop\n",
+    "    else:\n",
+    "        break\n",
+    "  \n",
+    "# When everything done, release\n",
+    "# the video capture object\n",
+    "cap.release()\n",
+    "  \n",
+    "# Closes all the frames\n",
+    "cv2.destroyAllWindows()"
+   ]
   }
  ],
  "metadata": {
