feat: 2 face detectors

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,13 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
     "import os\n",
     "import numpy as np\n",
+    "import pathlib\n",
+    "\n",
+    "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_default.xml\"\n",
+    "clf = cv2.CascadeClassifier(str(cascade_path))\n",
     "\n",
     "dir = \"./smaller-data\"\n",
     "for filename in os.listdir(dir):\n",
@@ -24,12 +28,25 @@
     "    height = colorImages.shape[0]\n",
     "    width = colorImages.shape[1]\n",
     "    size = (width, height)\n",
-    "    out = cv2.VideoWriter(os.path.join('./videos',f'{name}.mp4'), cv2.VideoWriter_fourcc(*'H264'), 25, size, False)\n",
+    "    # out = cv2.VideoWriter(os.path.join('./videos',f'{name}.mp4'), cv2.VideoWriter_fourcc(*'h264'), 25, size, isColor=False)\n",
     "    for i in range(colorImages.shape[-1]):\n",
     "        viss = []\n",
     "        img = np.ones((height, width, 3), np.uint8)\n",
     "        img1 = colorImages[:, :, :, i]\n",
     "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
+    "        img2 = img1\n",
+    "\n",
+    "        gray = cv2.cvtColor(img1, cv2.COLOR_BGR2GRAY)\n",
+    "        faces = clf.detectMultiScale(\n",
+    "            gray,\n",
+    "            scaleFactor = 1.1,\n",
+    "            minNeighbors = 5,\n",
+    "            minSize = (30, 30),\n",
+    "            flags = cv2.CASCADE_SCALE_IMAGE\n",
+    "        )\n",
+    "\n",
+    "        for (x, y, w, h) in faces:\n",
+    "            cv2.rectangle(img1, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
     "\n",
     "        bb = boundingBox[:, :, i]\n",
     "        for mark in landmarks2D[:, :, i]:\n",
@@ -41,63 +58,14 @@
     "                        (int(bb[3, 0]), int(bb[3, 1])),\n",
     "                        (0, 0, 255), 1)\n",
     "\n",
-    "        combine = np.hstack((img, img1))\n",
-    "        out.write(img1)\n",
-    "        # cv2.imshow('video', combine)\n",
-    "        # c = cv2.waitKey(1)\n",
-    "        # if c == 27:\n",
-    "        #     break\n",
-    "    out.release()\n",
-    "    cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "79\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Create a VideoCapture object and read from input file\n",
-    "cap = cv2.VideoCapture('./videos/Karin_Viard_1.mp4')\n",
-    "  \n",
-    "# Check if camera opened successfully\n",
-    "if (cap.isOpened() == False):\n",
-    "    print(\"Error opening video file\")\n",
-    "\n",
-    "length = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "print(length)\n",
-    "  \n",
-    "# Read until video is completed\n",
-    "while(cap.isOpened()):\n",
-    "      \n",
-    "# Capture frame-by-frame\n",
-    "    ret, frame = cap.read()\n",
-    "    if ret == True:\n",
-    "    # Display the resulting frame\n",
-    "        cv2.imshow('Frame', frame)\n",
-    "          \n",
-    "    # Press Q on keyboard to exit\n",
-    "        if cv2.waitKey(25) & 0xFF == ord('q'):\n",
+    "        combine = np.hstack((img, img1, img1, img1))\n",
+    "        # out.write(img1)\n",
+    "        cv2.imshow('video', combine)\n",
+    "        c = cv2.waitKey(1)\n",
+    "        if c == 27:\n",
     "            break\n",
-    "  \n",
-    "# Break the loop\n",
-    "    else:\n",
-    "        break\n",
-    "  \n",
-    "# When everything done, release\n",
-    "# the video capture object\n",
-    "cap.release()\n",
-    "  \n",
-    "# Closes all the frames\n",
-    "cv2.destroyAllWindows()"
+    "    # out.release()\n",
+    "    cv2.destroyAllWindows()"
    ]
   }
  ],
