--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,12 @@
     "import os\n",
     "import numpy as np\n",
     "import pathlib\n",
+    "\n",
+    "import dlib\n",
+    "\n",
+    "# Load the face detection model\n",
+    "detector = dlib.get_frontal_face_detector()\n",
+    "predictor = dlib.shape_predictor('./shape_predictor_68_face_landmarks.dat/shape_predictor_68_face_landmarks.dat')\n",
     "\n",
     "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_default.xml\"\n",
     "clf = cv2.CascadeClassifier(str(cascade_path))\n",
@@ -34,9 +40,12 @@
     "        img = np.ones((height, width, 3), np.uint8)\n",
     "        img1 = colorImages[:, :, :, i]\n",
     "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
-    "        img2 = img1\n",
+    "        img2 = img1.copy()\n",
     "\n",
     "        gray = cv2.cvtColor(img1, cv2.COLOR_BGR2GRAY)\n",
+    "        gray2 = cv2.cvtColor(img2, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        #Cascade Classifier\n",
     "        faces = clf.detectMultiScale(\n",
     "            gray,\n",
     "            scaleFactor = 1.1,\n",
@@ -48,6 +57,14 @@
     "        for (x, y, w, h) in faces:\n",
     "            cv2.rectangle(img1, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
     "\n",
+    "        #DLIB\n",
+    "        faces = detector(gray)\n",
+    "        for face in faces:\n",
+    "            landmarks = predictor(gray, face)\n",
+    "            x1, y1 = face.left(), face.top()\n",
+    "            x2, y2 = face.right(), face.bottom()\n",
+    "            cv2.rectangle(img2, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "\n",
     "        bb = boundingBox[:, :, i]\n",
     "        for mark in landmarks2D[:, :, i]:\n",
     "            cv2.circle(img, (int(mark[0]), int(mark[1])), 1, (255, 255, 255))\n",
@@ -58,7 +75,7 @@
     "                        (int(bb[3, 0]), int(bb[3, 1])),\n",
     "                        (0, 0, 255), 1)\n",
     "\n",
-    "        combine = np.hstack((img, img1, img1, img1))\n",
+    "        combine = np.hstack((img, img1, img2))\n",
     "        # out.write(img1)\n",
     "        cv2.imshow('video', combine)\n",
     "        c = cv2.waitKey(1)\n",
