feat: IOU and blurred faces

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,9 +2,429 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def results(tp, fp, fn):\n",
+    "    precision = tp/(tp + fp)\n",
+    "    recall = tp/(tp + fn)\n",
+    "    f1 = 2 * (precision * recall)/(precision + recall)\n",
+    "    print(\"tp: \", tp, \" fp: \", fp, \"fn: \", fn)\n",
+    "    print(\"Precision: \", round(precision, 2))\n",
+    "    print(\"Recall: \", round(recall, 2))\n",
+    "    print(\"F1: \", round(f1, 2))\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def get_iou(ground_truth, pred):\n",
+    "    # coordinates of the area of intersection.\n",
+    "    ix1 = np.maximum(ground_truth[0], pred[0])\n",
+    "    iy1 = np.maximum(ground_truth[1], pred[1])\n",
+    "    ix2 = np.minimum(ground_truth[2], pred[2])\n",
+    "    iy2 = np.minimum(ground_truth[3], pred[3])\n",
+    "     \n",
+    "    # Intersection height and width.\n",
+    "    i_height = np.maximum(iy2 - iy1 + 1, np.array(0.))\n",
+    "    i_width = np.maximum(ix2 - ix1 + 1, np.array(0.))\n",
+    "     \n",
+    "    area_of_intersection = i_height * i_width\n",
+    "     \n",
+    "    # Ground Truth dimensions.\n",
+    "    gt_height = ground_truth[3] - ground_truth[1] + 1\n",
+    "    gt_width = ground_truth[2] - ground_truth[0] + 1\n",
+    "     \n",
+    "    # Prediction dimensions.\n",
+    "    pd_height = pred[3] - pred[1] + 1\n",
+    "    pd_width = pred[2] - pred[0] + 1\n",
+    "     \n",
+    "    area_of_union = gt_height * gt_width + pd_height * pd_width - area_of_intersection\n",
+    "     \n",
+    "    iou = area_of_intersection / area_of_union\n",
+    "     \n",
+    "    return iou"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matt_LeBlanc_3 :\n",
+      "\n",
+      "tp:  67  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  60  fp:  0 fn:  7\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.94\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  67  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  60  fp:  0 fn:  7\n",
+      "Precision:  1.0\n",
+      "Recall:  0.9\n",
+      "F1:  0.94\n",
+      "\n",
+      "Nancy_Kerrigan_4 :\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  58  fp:  0 fn:  1\n",
+      "Precision:  1.0\n",
+      "Recall:  0.98\n",
+      "F1:  0.99\n",
+      "\n",
+      "Narendra_Modi_3 :\n",
+      "\n",
+      "tp:  107  fp:  0 fn:  4\n",
+      "Precision:  1.0\n",
+      "Recall:  0.96\n",
+      "F1:  0.98\n",
+      "\n",
+      "tp:  2  fp:  0 fn:  109\n",
+      "Precision:  1.0\n",
+      "Recall:  0.02\n",
+      "F1:  0.04\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  107  fp:  0 fn:  4\n",
+      "Precision:  1.0\n",
+      "Recall:  0.96\n",
+      "F1:  0.98\n",
+      "\n",
+      "tp:  2  fp:  0 fn:  109\n",
+      "Precision:  1.0\n",
+      "Recall:  0.02\n",
+      "F1:  0.04\n",
+      "\n",
+      "Natalia_Vodonova_1 :\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  43  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Natalie_Imbruglia_1 :\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  71  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Nick_Markakis_3 :\n",
+      "\n",
+      "tp:  56  fp:  1 fn:  2\n",
+      "Precision:  0.98\n",
+      "Recall:  0.97\n",
+      "F1:  0.97\n",
+      "\n",
+      "tp:  57  fp:  0 fn:  2\n",
+      "Precision:  1.0\n",
+      "Recall:  0.97\n",
+      "F1:  0.98\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  56  fp:  1 fn:  2\n",
+      "Precision:  0.98\n",
+      "Recall:  0.97\n",
+      "F1:  0.97\n",
+      "\n",
+      "tp:  57  fp:  0 fn:  2\n",
+      "Precision:  1.0\n",
+      "Recall:  0.97\n",
+      "F1:  0.98\n",
+      "\n",
+      "Nicolas_Eyzaguirre_0 :\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  125  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Norah_Jones_5 :\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  59  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Norman_Mineta_3 :\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  51  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Nursultan_Nazarbayev_1 :\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  63  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Olene_Walker_1 :\n",
+      "\n",
+      "tp:  102  fp:  1 fn:  1\n",
+      "Precision:  0.99\n",
+      "Recall:  0.99\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  104  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  102  fp:  1 fn:  1\n",
+      "Precision:  0.99\n",
+      "Recall:  0.99\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  104  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Ornella_Muti_0 :\n",
+      "\n",
+      "tp:  51  fp:  1 fn:  0\n",
+      "Precision:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  42  fp:  0 fn:  10\n",
+      "Precision:  1.0\n",
+      "Recall:  0.81\n",
+      "F1:  0.89\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  51  fp:  1 fn:  0\n",
+      "Precision:  0.98\n",
+      "Recall:  1.0\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  42  fp:  0 fn:  10\n",
+      "Precision:  1.0\n",
+      "Recall:  0.81\n",
+      "F1:  0.89\n",
+      "\n",
+      "Otto_Reich_1 :\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  55  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Otto_Reich_4 :\n",
+      "\n",
+      "tp:  239  fp:  1 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Modified:\n",
+      "\n",
+      "tp:  239  fp:  1 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "tp:  240  fp:  0 fn:  0\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n",
+      "\n",
+      "Result for entire database:\n",
+      "\n",
+      "tp:  1147  fp:  4 fn:  8\n",
+      "Precision:  1.0\n",
+      "Recall:  0.99\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  1030  fp:  0 fn:  129\n",
+      "Precision:  1.0\n",
+      "Recall:  0.89\n",
+      "F1:  0.94\n",
+      "\n",
+      "Result for entire database (modified): \n",
+      "tp:  1147  fp:  4 fn:  8\n",
+      "Precision:  1.0\n",
+      "Recall:  0.99\n",
+      "F1:  0.99\n",
+      "\n",
+      "tp:  1030  fp:  0 fn:  129\n",
+      "Precision:  1.0\n",
+      "Recall:  0.89\n",
+      "F1:  0.94\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import os\n",
@@ -20,6 +440,24 @@
     "cascade_path = pathlib.Path(cv2.__file__).parent.absolute() / \"data/haarcascade_frontalface_default.xml\"\n",
     "clf = cv2.CascadeClassifier(str(cascade_path))\n",
     "\n",
+    "font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "position = (10, 10) # (x, y) coordinates of the text position\n",
+    "\n",
+    "# Initialize counters for true positives, false positives, and false negatives\n",
+    "tp = 0\n",
+    "fp = 0\n",
+    "fn = 0\n",
+    "tp2 = 0\n",
+    "fp2 = 0\n",
+    "fn2 = 0\n",
+    "tp3 = 0\n",
+    "fp3 = 0\n",
+    "fn3 = 0\n",
+    "tp4 = 0\n",
+    "fp4 = 0\n",
+    "fn4 = 0\n",
+    "\n",
+    "\n",
     "dir = \"./smaller-data\"\n",
     "for filename in os.listdir(dir):\n",
     "    filepath = (os.path.join(dir, filename))\n",
@@ -31,6 +469,20 @@
     "    boundingBox = videoFile['boundingBox']\n",
     "    landmarks2D = videoFile['landmarks2D']\n",
     "\n",
+    "    # Initialize counters for true positives, false positives, and false negatives\n",
+    "    tpv = 0\n",
+    "    fpv = 0\n",
+    "    fnv = 0\n",
+    "    tp2v = 0\n",
+    "    fp2v = 0\n",
+    "    fn2v = 0\n",
+    "    tp3v = 0\n",
+    "    fp3v = 0\n",
+    "    fn3v = 0\n",
+    "    tp4v = 0\n",
+    "    fp4v = 0\n",
+    "    fn4v = 0\n",
+    "\n",
     "    height = colorImages.shape[0]\n",
     "    width = colorImages.shape[1]\n",
     "    size = (width, height)\n",
@@ -41,12 +493,20 @@
     "        img1 = colorImages[:, :, :, i]\n",
     "        img1 = cv2.cvtColor(img1, cv2.COLOR_BGR2RGB)\n",
     "        img2 = img1.copy()\n",
+    "        img3 = img1.copy()\n",
+    "        img4 = img1.copy()\n",
     "\n",
     "        gray = cv2.cvtColor(img1, cv2.COLOR_BGR2GRAY)\n",
     "        gray2 = cv2.cvtColor(img2, cv2.COLOR_BGR2GRAY)\n",
+    "        gray3 = cv2.cvtColor(img3, cv2.COLOR_BGR2GRAY)\n",
+    "        gray4 = cv2.cvtColor(img4, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "        img3 = cv2.GaussianBlur(img3, (7, 7), 0)\n",
+    "\n",
+    "        img4 = cv2.GaussianBlur(img4, (7, 7), 0)\n",
     "\n",
     "        #Cascade Classifier\n",
-    "        faces = clf.detectMultiScale(\n",
+    "        faces1 = clf.detectMultiScale(\n",
     "            gray,\n",
     "            scaleFactor = 1.1,\n",
     "            minNeighbors = 5,\n",
@@ -54,16 +514,44 @@
     "            flags = cv2.CASCADE_SCALE_IMAGE\n",
     "        )\n",
     "\n",
-    "        for (x, y, w, h) in faces:\n",
+    "        x, y, x, y = -1, -1, -1, -1\n",
+    "        for (x, y, w, h) in faces1:\n",
     "            cv2.rectangle(img1, (x, y), (x + w, y + h), (255, 255, 0), 2)\n",
     "\n",
+    "\n",
+    "        #Cascade Classifier Blurred\n",
+    "        faces3 = clf.detectMultiScale(\n",
+    "            gray3,\n",
+    "            scaleFactor = 1.1,\n",
+    "            minNeighbors = 5,\n",
+    "            minSize = (30, 30),\n",
+    "            flags = cv2.CASCADE_SCALE_IMAGE\n",
+    "        )\n",
+    "\n",
+    "        xb, yb, xb, yb = -1, -1, -1, -1\n",
+    "        for (xb, yb, wb, hb) in faces3:\n",
+    "            cv2.rectangle(img3, (xb, yb), (xb + wb, yb + hb), (255, 255, 0), 2)\n",
+    "\n",
+    "\n",
+    "        x1, y1, x2, y2 = -1, -1, -1, -1\n",
     "        #DLIB\n",
-    "        faces = detector(gray)\n",
-    "        for face in faces:\n",
-    "            landmarks = predictor(gray, face)\n",
+    "        faces2 = detector(gray2)\n",
+    "        for face in faces2:\n",
+    "            landmarks = predictor(gray2, face)\n",
     "            x1, y1 = face.left(), face.top()\n",
     "            x2, y2 = face.right(), face.bottom()\n",
     "            cv2.rectangle(img2, (x1, y1), (x2, y2), (0, 255, 0), 2)\n",
+    "\n",
+    "\n",
+    "        x1b, y1b, x2b, y2b = -1, -1, -1, -1\n",
+    "        #DLIB blurred\n",
+    "        faces4 = detector(gray4)\n",
+    "        for face in faces4:\n",
+    "            landmarks = predictor(gray4, face)\n",
+    "            x1b, y1b = face.left(), face.top()\n",
+    "            x2b, y2b = face.right(), face.bottom()\n",
+    "            cv2.rectangle(img4, (x1b, y1b), (x2b, y2b), (0, 255, 0), 2)\n",
+    "        \n",
     "\n",
     "        bb = boundingBox[:, :, i]\n",
     "        for mark in landmarks2D[:, :, i]:\n",
@@ -74,15 +562,98 @@
     "                        (int(bb[0, 0]), int(bb[0, 1])), \n",
     "                        (int(bb[3, 0]), int(bb[3, 1])),\n",
     "                        (0, 0, 255), 1)\n",
+    "        \n",
     "\n",
-    "        combine = np.hstack((img, img1, img2))\n",
+    "        #IOU\n",
+    "        if(x == -1):\n",
+    "            fn += 1\n",
+    "            fnv += 1\n",
+    "        else:\n",
+    "            iou = get_iou(bbox_true, [x, y, x + w, y + h])\n",
+    "            iou_str = f'CC IOU: {iou:.2f}'\n",
+    "            cv2.putText(img1, iou_str, position, font, 0.25, (255, 255, 0), 1, cv2.LINE_AA)\n",
+    "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            if(iou >= 0.5):\n",
+    "                tp += 1\n",
+    "                tpv += 1\n",
+    "            else:\n",
+    "                fp += 1\n",
+    "                fpv += 1\n",
+    "\n",
+    "        if(xb == -1):\n",
+    "            fn3 += 1\n",
+    "            fn3v += 1\n",
+    "        else:\n",
+    "            iou = get_iou(bbox_true, [xb, yb, xb + wb, yb + hb])\n",
+    "            iou_str = f'CC IOU: {iou:.2f}'\n",
+    "            cv2.putText(img3, iou_str, position, font, 0.25, (255, 255, 0), 1, cv2.LINE_AA)\n",
+    "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            if(iou >= 0.5):\n",
+    "                tp3 += 1\n",
+    "                tp3v += 1\n",
+    "            else:\n",
+    "                fp3 += 1\n",
+    "                fp3v += 1\n",
+    "\n",
+    "\n",
+    "        if(x1 == -1):\n",
+    "            fn2 += 1\n",
+    "            fn2v += 1\n",
+    "        else:\n",
+    "            iou = get_iou(bbox_true, [x1, y1, x2, y2])\n",
+    "            iou_str = f'DLIB IOU: {iou:.2f}'\n",
+    "            cv2.putText(img2, iou_str, position, font, 0.25, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            if(iou >= 0.5):\n",
+    "                tp2 += 1\n",
+    "                tp2v += 1\n",
+    "            else:\n",
+    "                fp2 += 1\n",
+    "                fp2v += 1\n",
+    "\n",
+    "\n",
+    "        if(x1b == -1):\n",
+    "            fn4 += 1\n",
+    "            fn4v += 1\n",
+    "        else:\n",
+    "            iou = get_iou(bbox_true, [x1b, y1b, x2b, y2b])\n",
+    "            iou_str = f'DLIB IOU: {iou:.2f}'\n",
+    "            cv2.putText(img4, iou_str, position, font, 0.25, (0, 255, 0), 1, cv2.LINE_AA)\n",
+    "            # print('CC IOU: ', iou)\n",
+    "\n",
+    "            if(iou >= 0.5):\n",
+    "                tp4 += 1\n",
+    "                tp4v += 1\n",
+    "            else:\n",
+    "                fp4 += 1\n",
+    "                fp4v += 1\n",
+    "\n",
+    "\n",
+    "        combine = np.hstack((img, img1, img2, img3, img4))\n",
     "        # out.write(img1)\n",
     "        cv2.imshow('video', combine)\n",
     "        c = cv2.waitKey(1)\n",
     "        if c == 27:\n",
     "            break\n",
     "    # out.release()\n",
-    "    cv2.destroyAllWindows()"
+    "    \n",
+    "    print(name ,\":\\n\")\n",
+    "    results(tpv, fpv, fnv)\n",
+    "    results(tp2v, fp2v, fn2v)\n",
+    "    print(\"Modified:\\n\")\n",
+    "    results(tp3v, fp3v, fn3v)\n",
+    "    results(tp4v, fp4v, fn4v)\n",
+    "    cv2.destroyAllWindows()\n",
+    "\n",
+    "print(\"Result for entire database:\\n\")\n",
+    "results(tp, fp, fn)\n",
+    "results(tp2, fp2, fn2)\n",
+    "print(\"Result for entire database (modified): \")\n",
+    "results(tp3, fp3, fn3)\n",
+    "results(tp4, fp4, fn4)"
    ]
   }
  ],
