feat: lowest recall/precission

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "\n",
+    "# Code borrowed from learnopencv: https://learnopencv.com/intersection-over-union-iou-in-object-detection-and-segmentation/\n",
     "def get_iou(ground_truth, pred):\n",
     "    # coordinates of the area of intersection.\n",
     "    ix1 = np.maximum(ground_truth[0], pred[0])\n",
@@ -56,13 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "rec: 7 0\n",
       "Matt_LeBlanc_3 :\n",
       "\n",
       "tp:  67  fp:  0 fn:  0\n",
@@ -111,6 +112,7 @@
       "Recall:  0.98\n",
       "F1:  0.99\n",
       "\n",
+      "rec: 109 7\n",
       "Narendra_Modi_3 :\n",
       "\n",
       "tp:  107  fp:  0 fn:  4\n",
@@ -183,6 +185,7 @@
       "Recall:  1.0\n",
       "F1:  1.0\n",
       "\n",
+      "prec:  1 0\n",
       "Nick_Markakis_3 :\n",
       "\n",
       "tp:  56  fp:  1 fn:  2\n",
@@ -400,7 +403,6 @@
       "F1:  1.0\n",
       "\n",
       "Result for entire database:\n",
-      "\n",
       "tp:  1147  fp:  4 fn:  8\n",
       "Precision:  1.0\n",
       "Recall:  0.99\n",
@@ -421,7 +423,9 @@
       "Precision:  1.0\n",
       "Recall:  0.89\n",
       "F1:  0.94\n",
-      "\n"
+      "\n",
+      "Lowest recall:  Nick_Markakis_3\n",
+      "Lowest precission:  Narendra_Modi_3\n"
      ]
     }
    ],
@@ -430,7 +434,6 @@
     "import os\n",
     "import numpy as np\n",
     "import pathlib\n",
-    "\n",
     "import dlib\n",
     "\n",
     "# Load the face detection model\n",
@@ -442,6 +445,9 @@
     "\n",
     "font = cv2.FONT_HERSHEY_SIMPLEX\n",
     "position = (10, 10) # (x, y) coordinates of the text position\n",
+    "\n",
+    "brightness = 200\n",
+    "contrast = 150\n",
     "\n",
     "# Initialize counters for true positives, false positives, and false negatives\n",
     "tp = 0\n",
@@ -456,6 +462,11 @@
     "tp4 = 0\n",
     "fp4 = 0\n",
     "fn4 = 0\n",
+    "\n",
+    "prec = \"\"\n",
+    "rec = \"\"\n",
+    "prec_max = 0\n",
+    "rec_max = 0\n",
     "\n",
     "\n",
     "dir = \"./smaller-data\"\n",
@@ -501,8 +512,17 @@
     "        gray3 = cv2.cvtColor(img3, cv2.COLOR_BGR2GRAY)\n",
     "        gray4 = cv2.cvtColor(img4, cv2.COLOR_BGR2GRAY)\n",
     "\n",
+    "        # Enhance the brightness and contrast\n",
+    "        img3 = np.int16(img3)\n",
+    "        img3 = img3 * (contrast/10000+1) - contrast + brightness\n",
+    "        img3 = np.clip(img3, 0, 255)\n",
+    "        img3 = np.uint8(img3)\n",
     "        img3 = cv2.GaussianBlur(img3, (7, 7), 0)\n",
     "\n",
+    "        img4 = np.int16(img4)\n",
+    "        img4 = img4 * (contrast/10000+1) - contrast + brightness\n",
+    "        img4 = np.clip(img4, 0, 255)\n",
+    "        img4 = np.uint8(img4)\n",
     "        img4 = cv2.GaussianBlur(img4, (7, 7), 0)\n",
     "\n",
     "        #Cascade Classifier\n",
@@ -631,7 +651,6 @@
     "                fp4 += 1\n",
     "                fp4v += 1\n",
     "\n",
-    "\n",
     "        combine = np.hstack((img, img1, img2, img3, img4))\n",
     "        # out.write(img1)\n",
     "        cv2.imshow('video', combine)\n",
@@ -639,6 +658,16 @@
     "        if c == 27:\n",
     "            break\n",
     "    # out.release()\n",
+    "\n",
+    "    var = max(fnv, fn2v, fn3v, fn4v)\n",
+    "    if(var > rec_max):\n",
+    "        rec_max = var\n",
+    "        rec = name\n",
+    "\n",
+    "    var = max(fpv, fp2v, fp3v, fp4v)\n",
+    "    if(var > prec_max):\n",
+    "        prec_max = var\n",
+    "        prec = name\n",
     "    \n",
     "    print(name ,\":\\n\")\n",
     "    results(tpv, fpv, fnv)\n",
@@ -648,12 +677,14 @@
     "    results(tp4v, fp4v, fn4v)\n",
     "    cv2.destroyAllWindows()\n",
     "\n",
-    "print(\"Result for entire database:\\n\")\n",
+    "print(\"Result for entire database:\")\n",
     "results(tp, fp, fn)\n",
     "results(tp2, fp2, fn2)\n",
     "print(\"Result for entire database (modified): \")\n",
     "results(tp3, fp3, fn3)\n",
-    "results(tp4, fp4, fn4)"
+    "results(tp4, fp4, fn4)\n",
+    "print(\"Lowest recall: \", prec)\n",
+    "print(\"Lowest precission: \", rec)"
    ]
   }
  ],
